--- a/src/components/search-results/search-results.css
+++ b/src/components/search-results/search-results.css
@@ -10,7 +10,7 @@ button.search-button {
 }
 
 button.add-button {
-  width: 320px;
+  width: 300px;
   height: 45px;
   padding: 10px;
   background: rgb(19, 96, 102);
@@ -38,15 +38,11 @@ input[type="search"] {
   margin: 0 auto;
 }
 
-ul {
-	margin: 0 auto;
-}
-
 .album-search-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0;
-  margin: 0 auto;
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-gap: 40px;
+  /* margin: 0 auto; */
 }
 
 .search-list-item button {
@@ -110,9 +106,9 @@ ul {
 @media only screen and (min-width: 465px) {
 
 	.album-search-list {
-		display: grid;
+		/* display: grid; */
 		grid-template-columns: 100%;
-		grid-gap: 20px;
+		/* grid-gap: 20px; */
 	}
 
 	button.search-button {
@@ -165,7 +161,7 @@ ul {
 }
 
 /* Medium devices (landscape tablets, 600 and up) */
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) {
 	.album-search-list {
 		grid-template-columns: 100%;
   }
@@ -184,7 +180,7 @@ ul {
     width: 290px;
   }
 
-} 
+}  */
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
@@ -201,11 +197,8 @@ ul {
 /* Medium devices (landscape tablets, 860px and up) */
 @media only screen and (min-width: 860px) {
 	.album-search-list {
-		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 20px;
-		margin: 0 auto;
-    width: 100%;
+		grid-gap: 40px;
 	}
 
 } 
@@ -215,7 +208,7 @@ ul {
 	.album-search-list { 
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
-		grid-gap: 20px;
+		grid-gap: 25px;
 		margin: 0 auto;
     width: 100%;
   }
